@@ -1,0 +1,23 @@
+---
+config:
+  dedup: 1
+  test_empty: 1
+  test_non_ascii: 0
+  test_nuls: 0
+  test_undef: 0
+function: is_debug
+module: Log::Abstraction
+new: ~
+output:
+  _success_indicator: 1
+  _type_confidence: medium
+  type: boolean
+
+# Generated by App::Test::Generator::SchemaExtractor
+# Run: fuzz-harness-generator -r schemas/is_debug.yml
+#
+# Input confidence: none
+# Output confidence: medium
+#
+# Analysis:
+# TODO:
